--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#featured" style="color: #CE5E82;">Featured On</a></li>
             <li><a href="#trivia" style="color: #CE5E82;">Trivia</a></li>
             <li><a href="#media" style="color: #CE5E82;">Media</a></li>
+            <li><a href="#contact" style="color: #CE5E82;">Contact Data</a></li>
         </ol>
 
         <h3 id="lyrics" style="color: #ECA089;">Lyrics</h3>
@@ -195,6 +196,39 @@ Set me on fire
         <p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6DlPa2rrVK3BygXJ48WYo3?utm_source=generator" width="50%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </p>
+
+        <h3 id="contact" style="color: #ECA089;">Contacto</h3>
+        <fieldset>
+            <legend>Introduce your contact data:</legend>
+                <label for="username">Name:</label>
+                <input type="text" id="username" name="fname">
+                <label for="usersurname1">Surname:</label>
+                <input type="text" id="usersurname1" name="fsurname1">
+                <br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email">
+                <label for="phone">Phone Number:</label>
+                <input type="text" id="phone" name="fphone">
+                <br><br>
+                <label for="birthday">Birthday:</label>
+                <input type="date" id="birthday" min="1900-01-01" max="2077-12-31">
+                <fieldset>
+                    <legend>Gender:</legend>
+                    <label for="M">Male:</label>
+                    <input type="radio" id="M" name="gender">
+                    <br>
+                    <label for="F">Female:</label>
+                    <input type="radio" id="F" name="gender">
+                    <br>
+                    <label for="O">Other:</label>
+                    <input type="radio" id="O" name="gender">
+                </fieldset>
+                <br><br>
+                <label for="terms">Acept Terms and Conditions:</label>
+	            <input type="checkbox" id="terms" name="terms">
+                <br><br>
+                <input type="submit">
+        </fieldset>
         <h4><a href="#arriba" style="color: #CE5E82;">Volver Arriba</a></h4>
         <br /> <br /> <br />
     </body>
