--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" style="background-color:#2E4770; color:#ECC6A2;">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <title>Running in the 90s</title>
@@ -9,23 +9,23 @@
         <a href="https://youtu.be/XCiDuy4mrWU">
             <img align="right" src="media/img/Running_in_the_90s_Dave_Rodgers_Single.png" width="300" height="300" title="Running_in_the_90s_Dave_Rodgers_Single" alt="Running_in_the_90s_Dave_Rodgers_Single">
         </a>
-        <h1 id="arriba" style="color: #ECA089;">Running in the 90s</h1>
+        <h1 id="arriba">Running in the 90s</h1>
 
         <p>Running in the 90s is a song by Maurizio De Jorio under the alias Max Coveri. It was released as a vinyl single in 1999, with Golden Age as a B-Side.<br><br>
         The song was covered in 2019 by Giancarlo Pasquini under the alias Dave Rodgers.</p>
         <br>
         
-        <h3 style="color: #ECA089;">Contenidos</h3>
+        <h3>Contenidos</h3>
 
         <ol>
-            <li><a href="#lyrics" style="color: #CE5E82;">Lyrics</a></li>
-            <li><a href="#featured" style="color: #CE5E82;">Featured On</a></li>
-            <li><a href="#trivia" style="color: #CE5E82;">Trivia</a></li>
-            <li><a href="#media" style="color: #CE5E82;">Media</a></li>
-            <li><a href="#contact" style="color: #CE5E82;">Contact Data</a></li>
+            <li><a href="#lyrics">Lyrics</a></li>
+            <li><a href="#featured">Featured On</a></li>
+            <li><a href="#trivia">Trivia</a></li>
+            <li><a href="#media">Media</a></li>
+            <li><a href="#contact">Contact Data</a></li>
         </ol>
 
-        <h3 id="lyrics" style="color: #ECA089;">Lyrics</h3>
+        <h3 id="lyrics">Lyrics</h3>
         <hr>
         <pre>
 [Verse 1]
@@ -65,7 +65,7 @@ Lift me higher with your mind
 Set me on fire
         </pre>
 
-        <h3 id="featured" style="color: #ECA089;">Featured On</h3>
+        <h3 id="featured">Featured On</h3>
         <hr>
         <table border="1">
             <tr>
@@ -90,7 +90,7 @@ Set me on fire
                     Running In The 90s
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Super_Eurobeat_Vol._85" style="color: #CE5E82;">Super Eurobeat Vol. 85</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Super_Eurobeat_Vol._85">Super Eurobeat Vol. 85</a>
                 </td>
                 <td>
                     Track 9
@@ -104,7 +104,7 @@ Set me on fire
                     Running In The 90's (Extended Mix)
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Super_Eurobeat_Vol._99" style="color: #CE5E82;">Super Eurobeat Vol. 99</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Super_Eurobeat_Vol._99">Super Eurobeat Vol. 99</a>
                 </td>
                 <td>
                     Disc 2,
@@ -152,7 +152,7 @@ Set me on fire
                     Running In The '90s (by Dave Rodgers)
                 </td>
                 <td> <!--Página interna-->
-                    <a href="pages/Deja_Vu.html" style="color: #CE5E82;">Deja Vu</a>
+                    <a href="pages/Deja_Vu.html">Deja Vu</a>
                 </td>
                 <td>
                     Track 12
@@ -166,7 +166,7 @@ Set me on fire
                     Running In The '90s
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Super_Eurobeat_Vol._85#Extended_Version_-_Delta_Edition" style="color: #CE5E82;">Super Eurobeat Vol. 85 Extended Version Delta<br>Edition</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Super_Eurobeat_Vol._85#Extended_Version_-_Delta_Edition">Super Eurobeat Vol. 85 Extended Version Delta<br>Edition</a>
                 </td>
                 <td>
                     Track 4
@@ -174,7 +174,7 @@ Set me on fire
             </tr>
         </table>
         <br>
-        <h3 id="trivia" style="color: #ECA089;">Trivia</h3>
+        <h3 id="trivia">Trivia</h3>
         <hr>
         <ul>
             <li>Running in the 90s was featured in Episode 4 and Episode 9 of Initial D. It was also featured in Initial D: Ryosuke Takahashi's Fastest Typing-theory, Initial D Arcade Stage 2, Initial D Special Stage and Pachislot Initial D.</li>
@@ -182,22 +182,22 @@ Set me on fire
             <li>Running in the 90s is frequently used in Youtube Poop videos, as well as many car related memes.</li>
         </ul>
         <br>
-        <h3 id="media" style="color: #ECA089;">Media</h3>
+        <h3 id="media">Media</h3>
         <hr>
-        <h4 style="color: #ECA089;">Running in the 90s video</h4>
+        <h4>Running in the 90s video</h4>
         <p>
 			<iframe src="https://player.vimeo.com/video/294275568?h=cff8b81f15" width="640" height="480" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
             <p>
-                <a href="https://vimeo.com/294275568" style="color: #CE5E82;">Running In The 90&#039;s</a> from <a href="https://vimeo.com/user89725043" style="color: #CE5E82;">Tribuloid _YT</a> on <a href="https://vimeo.com" style="color: #CE5E82;">Vimeo</a>.
+                <a href="https://vimeo.com/294275568" style="color: #CE5E82;">Running In The 90&#039;s</a> from <a href="https://vimeo.com/user89725043">Tribuloid _YT</a> on <a href="https://vimeo.com" style="color: #CE5E82;">Vimeo</a>.
             </p>
 		</p>
 
-        <h4 style="color: #ECA089;">Running in the 90s audio</h4>
+        <h4>Running in the 90s audio</h4>
         <p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6DlPa2rrVK3BygXJ48WYo3?utm_source=generator" width="50%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </p>
 
-        <h3 id="contact" style="color: #ECA089;">Contacto</h3>
+        <h3 id="contact">Contacto</h3>
         <fieldset>
             <legend>Introduce your contact data:</legend>
                 <label for="username">Name:</label>
