--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Running in the 90s</title>
+	<link rel="stylesheet" href="base.css">
     </head>
     <body>
         <hr>
