--- a/pages/Deja_Vu.html
+++ b/pages/Deja_Vu.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="es" style="background-color:#2E4770; color:#ECC6A2;">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <title>Deja Vu</title>
+	<link rel="stylesheet" href="../base.css">
     </head>
     <body>
         <hr>
         <a href="https://youtu.be/tNF05-A1xY0">
             <img align="right" src="../media/img/Deja_Vu_2019_Album.png" width="300" height="300" title="Deja_Vu_2019_Album" alt="Deja_Vu_2019_Album">
         </a>
-        <h1 style="color: #ECA089;">Deja Vu</h1>
+        <h1>Deja Vu</h1>
 
         <p>Deja Vu is a 2019 Eurobeat album by Giancarlo Pasquini under the alias Dave Rodgers. It consists of a mix of modern remixes of older eurobeat songs, and several new original tracks.</p>
         
-        <h3 style="color: #ECA089;">Track Listing</h3>
+        <h3>Track Listing</h3>
         <hr>
         <table border="1">
             <tr>
@@ -32,7 +33,7 @@
                     1.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Beat_Of_The_Rising_Sun" style="color: #CE5E82;">Beat Of The Rising Sun 2020</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Beat_Of_The_Rising_Sun">Beat Of The Rising Sun 2020</a>
                 </td>
                 <td>
                     4:19
@@ -43,7 +44,7 @@
                     2.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Spitfire_(Dave_Rodgers_Song)" style="color: #CE5E82;">Spitfire (Album Version)</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Spitfire_(Dave_Rodgers_Song)">Spitfire (Album Version)</a>
                 </td>
                 <td>
                     5:16
@@ -54,7 +55,7 @@
                     3.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Space_Boy" style="color: #CE5E82;">Space Boy 2020</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Space_Boy">Space Boy 2020</a>
                 </td>
                 <td>
                     4:44
@@ -65,7 +66,7 @@
                     4.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Music_For_The_People" style="color: #CE5E82;">Music For The People 2020 (ft. Domino and Kaioh)</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Music_For_The_People">Music For The People 2020 (ft. Domino and Kaioh)</a>
                 </td>
                 <td>
                     7:00
@@ -98,7 +99,7 @@
                     7.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Gas_Gas_Gas" style="color: #CE5E82;">Gas Gas Gas</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Gas_Gas_Gas">Gas Gas Gas</a>
                 </td>
                 <td>
                     4:42
@@ -131,7 +132,7 @@
                     10.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Seventies_(Song)" style="color: #CE5E82;">Seventies 2020</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Seventies_(Song)">Seventies 2020</a>
                 </td>
                 <td>
                     4:27
@@ -153,7 +154,7 @@
                     11.
                 </td>
                 <td> <!--Página interna-->
-                    <a href="../RunningInThe90s.html" style="color: #CE5E82;">Running In The '90s</a>
+                    <a href="../RunningInThe90s.html">Running In The '90s</a>
                 </td>
                 <td>
                     5:27
@@ -164,7 +165,7 @@
                     12.
                 </td>
                 <td>
-                    <a href="https://eurobeat.fandom.com/wiki/Deja_Vu_(Song)" style="color: #CE5E82;">Deja Vu 2019</a>
+                    <a href="https://eurobeat.fandom.com/wiki/Deja_Vu_(Song)">Deja Vu 2019</a>
                 </td>
                 <td>
                     4:01
@@ -172,7 +173,7 @@
             </tr>
         </table>
         <br>
-        <h3 style="color: #ECA089;">Trivia</h3>
+        <h3>Trivia</h3>
         <hr>
         <ul>
             <li>There was a limited physical run of 200 copies of the album released on CD.</li>
