--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Set me on fire
 
         <h3 id="featured">Featured On</h3>
         <hr>
-        <table border="1">
+        <table>
             <tr>
                 <th>
                     <strong>Year</strong>
