--- a/pages/Deja_Vu.html
+++ b/pages/Deja_Vu.html
@@ -16,7 +16,7 @@
         
         <h3>Track Listing</h3>
         <hr>
-        <table border="1">
+        <table>
             <tr>
                 <th>
                     <strong>Track No.</strong>
