--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <hr>
         <a href="https://youtu.be/XCiDuy4mrWU">
-            <img align="right" src="media/img/Running_in_the_90s_Dave_Rodgers_Single.png" width="300" height="300" title="Running_in_the_90s_Dave_Rodgers_Single" alt="Running_in_the_90s_Dave_Rodgers_Single">
+            <img id="side" src="media/img/Running_in_the_90s_Dave_Rodgers_Single.png" width="300" height="300" title="Running_in_the_90s_Dave_Rodgers_Single" alt="Running_in_the_90s_Dave_Rodgers_Single">
         </a>
         <h1 id="arriba">Running in the 90s</h1>
 
