--- a/pages/Deja_Vu.html
+++ b/pages/Deja_Vu.html
@@ -8,7 +8,7 @@
     <body>
         <hr>
         <a href="https://youtu.be/tNF05-A1xY0">
-            <img align="right" src="../media/img/Deja_Vu_2019_Album.png" width="300" height="300" title="Deja_Vu_2019_Album" alt="Deja_Vu_2019_Album">
+            <img id="side" src="../media/img/Deja_Vu_2019_Album.png" width="300" height="300" title="Deja_Vu_2019_Album" alt="Deja_Vu_2019_Album">
         </a>
         <h1>Deja Vu</h1>
 
