--- a/pages/Deja_Vu.html
+++ b/pages/Deja_Vu.html
@@ -154,7 +154,7 @@
                     11.
                 </td>
                 <td> <!--Página interna-->
-                    <a href="../RunningInThe90s.html">Running In The '90s</a>
+                    <a href="../index.html">Running In The '90s</a>
                 </td>
                 <td>
                     5:27
